<resources>
    <string name="app_name">Church kit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="song">Song</string>
    <string name="bible">Bible</string>
    <string name="old">Old</string>
    <string name="testament">testament</string>
    <string name="part">parts</string>
    <string name="cancel">Cancel</string>
    <string name="update_directory">Update directory</string>
    <string name="update">update</string>
    <string name="more">More</string>
    <string name="about_app">Welcome to Church Kit, the perfect app to enhance your worship and connection with God. \nCreated by two computer systems students, Benderson and Ersen, Church Kit is a practical and useful tool for those looking to deepen their Christian faith.\n\n
The app has two main sections: the Bible section and the songs section. The Bible section allows you to access different versions of the Bible, with all the features you need to study and analyze the Word of God. You can also save your favorite verses, perform advanced searches, and read additional notes to help you better understand the texts.\n\n
The songs section provides access to a wide variety of worship songs, from classic hymns to modern songs. You can view the lyrics, listen to the songs, and add your favorites to a personalized playlist. You can also find the chords and lyrics to play them in your church or worship meetings.\n\n
Currently, Church Kit is available for free and without advertisements, but future versions will include advertising. This will allow us to continue developing the app and improving the user experience. If you have any comments, suggestions, or issues with the app, please do not hesitate to contact us through our support page.\n\n

In summary, Church Kit is the ideal app for anyone looking to get closer to God through the Bible and worship music. Download it today and start enjoying all its features and useful tools for your worship experience and spiritual growth.</string>
    <string name="song_hope">Song Hope</string>
    <string name="chorus">-Chorus-</string>
    <string name="faq">1. <b>How do I download the Church Kit app?</b>\nYou can download the Church Kit app from your mobile device\'s app store.\n\n
2. <b>Is Church Kit free?</b>\nYes, Church Kit is currently free.\n\n
3. <b>Can I access different versions of the Bible in Church Kit?</b>\nYes, Church Kit allows access to different versions of the Bible.\n\n
4. <b>Can I save my favorite verses in Church Kit?</b>\nYes, Church Kit allows you to save favorite verses.\n\n
5. <b>Can I perform advanced searches in Church Kit?</b>\nYes, Church Kit allows for advanced searches in the Bible.\n\n
6. <b>Can I read additional notes in Church Kit to better understand the biblical texts?</b>\nYes, Church Kit provides additional notes to help understand the biblical texts.\n\n
7. <b>Can I access a wide variety of worship songs in Church Kit?</b>\nYes, Church Kit provides access to a wide variety of worship songs.\n\n
8. <b>Can I add my favorite songs to a personalized playlist in Church Kit?</b>\nYes, Church Kit allows you to add favorite songs to a personalized playlist.\n\n
9. <b>Can I find the chords and lyrics of songs in Church Kit?</b>\nYes, Church Kit provides chords and lyrics of songs.\n\n
10. <b>Can I use Church Kit to play worship songs in my church?</b>\nYes, Church Kit provides chords and lyrics of songs to be played in the church.\n\n
11. <b>What types of worship songs are available in Church Kit?</b>\nChurch Kit provides a wide variety of worship songs, from classic hymns to modern songs.\n\n
12. <b>Can I send feedback or suggestions to the Church Kit developers?</b>\nYes, you can send feedback and suggestions through the Church Kit support page.\n\n
13. <b>How can I report a problem or error in Church Kit?</b>\nYou can report a problem or error through the Church Kit support page.\n\n
14. <b>Can I use Church Kit offline?</b>\nYes, you can use Church Kit offline if you have previously downloaded the necessary resources.\n\n
15. <b>Can I change the Bible version in Church Kit?</b>\nYes, you can change the Bible version in Church Kit.\n\n
16. <b>Can I change the font size in Church Kit?</b>\nYes, you can change the font size in Church Kit.\n\n
17. <b>Can I change the app theme in Church Kit?</b>\nYes, you can change the app theme in Church Kit.\n\n
18. <b>Is Church Kit available in multiple languages?</b>\nCurrently, Church Kit is only available in English.\n\n
19. <b>Can I share a verse or song on social media from Church Kit?</b>\nYes, you can share a verse or song on social media from Church Kit.\n\n
20. <b>Can I add my own notes to verses in Church Kit?</b>\nYes, you can add your own notes to verses in Church Kit\n\n</string>
    <string name="old_testament">Old Testament</string>
    <string name="new_testament">New Testament</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>


    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="letter_size" translatable="false">20</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="history">Histories</string>
    <string name="favorite">Favorites</string>
    <string name="about">About</string>
    <string name="donate">Donate</string>
    <string name="version_app">Version: </string>
    <string name="scroll_to_chorus">scroll to chorus</string>
    <string name="language">Language</string>
    <string name="reading">Reading</string>
    <string name="letter_size_title">Letter size</string>
    <string name="font">Font</string>
    <string name="use_bold_font">Bold font</string>
    <string name="switch_title_btn_chorus">Activate button chorus</string>
    <string name="switch_summary_btn_chorus">Make the Chorus button appear when there is a chorus in a song.</string>
    <string name="switch_title_btn_song_abrr_color">Song color abbreviation</string>
    <string name="switch_summary_btn_song_abrr_color">Assign a different color to each abbreviation for each book.</string>
    <string name="display">Display</string>
    <string name="dark_mode">Dark mode</string>
    <string name="title_activity_list_song">ListSongActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_not_installed_on_device">This app is not installed on your device.</string>

    <string name="song_history">Song Histories</string>
    <string name="song_favorite">Song Favorites</string>

    <string name="chapter_history">Bible Favorites</string>
    <string name="chapter_favorite">Bible Histories</string>

    <string name="full_text_search">Full text search</string>
    <string name="normal_search">Normal search</string>
    <string name="books">books</string>
    <string name="img_save_in_gallery">Image saved in gallery</string>
    <string name="select_text_first">Please select a text first</string>
    <string name="delete">Delete</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_activityefase">MainActivityefase</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="exeple_search_verse_bible"> <b>2 Timothée 1:16</b> Le seigneur fasse misécorde à la famille d\'Onésiphore; car il m\'a souvent consolé, et il n\'a point eu honte de mes chaînes.</string>
    <string name="and">and</string>
    <string name="please_enter_title_first">Please enter a title first</string>
    <string name="to">to</string>
    <string name="verse_range">Verse: 1 to</string>
    <string name="restart_2_use_new_">"Restart the app to use the new "</string>
    <string name="go_to">Go to</string>
    <string name="to_download_a_bible">to download a bible</string>
    <string name="to_download_a_song_book">to download a song book</string>
    <string name="select_bible">Select a Bible</string>
    <string name="search_by">Search Type</string>
    <string name="note">Note</string>
    <string name="download_a_song_book">Download a Song book</string>
    <string name="download_bible">Download a  Bible</string>
    <string name="download_song">Download a  Song</string>
    <string name="search_a_note">Search a note</string>
    <string name="pls_conect_internet">Please connect to the internet.</string>
    <string name="keep_window_open_for_delete">Keep this window open while Church kit finishes deleting that book.</string>
    <string name="delete_book_action_irreversible">This action is irreversible, do you really want to delete this book? By deleting this book, your favorites, histories and bookmarks associated with this book will also be deleted.</string>
    <string name="image">Image</string>
    <string name="copy">Copy</string>
    <string name="bookmark">Bookmark</string>
    <string name="technologies">Technologies</string>
</resources>