<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/homeFragment"
        android:title="@string/song"
        android:icon="@drawable/song_24"
        xmlns:android="http://schemas.android.com/apk/res/android" />

    <item android:id="@+id/bookmarkFragment"
        android:title="@string/bible"
        android:icon="@drawable/bible_24"
        xmlns:android="http://schemas.android.com/apk/res/android" />
    <item android:id="@+id/noteFragment"
        android:title="@string/note"
        android:icon="@drawable/note_24"
        xmlns:android="http://schemas.android.com/apk/res/android" />

    <item android:id="@+id/historyFragment"
        android:title="@string/more"
        android:icon="@drawable/settings_24"

        xmlns:android="http://schemas.android.com/apk/res/android" />

</menu>

