<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/bookmarkFragment"
        android:name="com.churchkit.churchkit.ui.bible.BookmarkFragment"
        android:label="@string/bible"
        tools:layout="@layout/fragment_bookmark" >
        <action
            android:id="@+id/action_bookmarkFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_bookmarkFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.churchkit.churchkit.ui.song.SongHope"
        android:label="@string/song_hope"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_bookmarkFragment"
            app:destination="@id/bookmarkFragment" />
        <action
            android:id="@+id/action_homeFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
        <action
            android:id="@+id/action_homeFragment_to_listOptionFragment"
            app:destination="@id/listOptionFragment" />
        <action
            android:id="@+id/action_homeFragment_to_listSongsFragment2"
            app:destination="@id/listSongsFragment" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.churchkit.churchkit.ui.more.MoreFragment"
        android:label="@string/more"
        tools:layout="@layout/more_history" >
        <action
            android:id="@+id/action_historyFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_historyFragment_to_bookmarkFragment"
            app:destination="@id/bookmarkFragment" />
    </fragment>
    <fragment
        android:id="@+id/listOptionFragment"
        android:name="com.churchkit.churchkit.ui.song.ListOptionFragment"
        android:label="fragment_list_option"
        tools:layout="@layout/fragment_list_option" >
        <action
            android:id="@+id/action_listOptionFragment_to_listSongsFragment"
            app:destination="@id/listSongsFragment" />
    </fragment>
    <fragment
        android:id="@+id/listSongsFragment"
        android:name="com.churchkit.churchkit.ui.song.ListSongsFragment"
        android:label="fragment_list_songs"
        tools:layout="@layout/fragment_list_songs" >
        <action
            android:id="@+id/action_listSongsFragment_to_songFragment"
            app:destination="@id/songFragment" />
    </fragment>
    <fragment
        android:id="@+id/songFragment"
        android:name="com.churchkit.churchkit.ui.song.SongFragment"
        android:label="fragment_song"
        tools:layout="@layout/fragment_song" />
</navigation>